--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 </div>
                 <div id="2012-1" class="panel-collapse collapse">
                   <div class="panel-body">
-                    <p>We rented out a hand-built castle in upstate New York, filming the live action trailer of Trap Door City. During Adam & Luna epic journey, they build and use StoryApp's Kiiy to defeat the evil monster Rakasasha.</p>
+                    <p>We rented out a hand-built castle in upstate New York, filming the live action trailer of Trap Door City. During Adam and Luna's epic journey, they build and use StoryApp's Kiiy to defeat the evil monster Rakasasha.</p>
                     <p>Currently in post-production digital animation, sound leveling, and color balancing, along with full script writing.</p>
                     <p><a class="btn btn-primary" href="mailto:sean@adamandluna.com" role="button">Contact for Details &raquo;</a></p>
                   </div>
@@ -267,7 +267,7 @@
                 <div id="2011-1" class="panel-collapse collapse">
                   <div class="panel-body">
                     <p>I was charged with taking the alpha product and getting it ready for consumer lauch, then iterating on the product to make it more fun and engaging.</p>
-                    <p>Plyfe gave you points for your social media activity. Perform challenges, earn points and raffle tickets, win real world prizes and vacations.</p>
+                    <p>Plyfe gave you points for your social media activity. Perform challenges, earn points and raffle tickets, level up, unlock boosts, and win real world prizes and vacations.</p>
                     <p>We had over 50,000 users one month after launch earning more than 210 million points.</p>
                     <p><a class="btn btn-primary" href="http://plyfe.com" role="button">Gamify Your Company &raquo;</a></p>
                   </div>
@@ -278,13 +278,13 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#2011-2">
-                      Built <span class="heavy">Swingbyte</span> iPhone / iPad app.
+                      Built <span class="heavy">Swingbyte's</span> iPhone / iPad app.
                     </a>
                   </h4>
                 </div>
                 <div id="2011-2" class="panel-collapse collapse">
                   <div class="panel-body">
-                    <p>One of my friend was working with Russian missile scientists (you can't make this stuff up) to build a golf swing tracking app. They needed help designing and building the iPhone / iPad portion of their product and called me in to help.</p>
+                    <p>One of my friends was working with Russian missile scientists (you can't make this stuff up) to build a golf swing tracking app. They needed help designing and building the iPhone / iPad portion of their product and called me in to help.</p>
                     <p>It was a hardware + software play and was recently featured in <a href="http://uncrate.com/stuff/swingbyte/">Uncrate</a> and many other publications.</p>
                     <p><a class="btn btn-primary" href="http://www.swingbyte.com" role="button">Visit Swingbyte &raquo;</a></p>
                   </div>
@@ -319,7 +319,7 @@
                 <div id="2011-4" class="panel-collapse collapse">
                   <div class="panel-body">
                     <p>When we wake up we've got a million messages, need to get ready for work, and grab some breakfast before leaving the house. The last thing we want to do is open yet another app and wait for the weather to load.</p>
-                    <p>So, we built Weather Notifier iPhone ap to send you push notifications with the day's forecast.</p>
+                    <p>So, we built Weather Notifier iPhone app to send you push notifications with the day's forecast.</p>
                     <p><a class="btn btn-primary" href="http://weathernotifierapp.com" role="button">Get Weather Notifications &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
@@ -410,7 +410,7 @@
                 </div>
                 <div id="2009-1" class="panel-collapse collapse">
                   <div class="panel-body">
-                    <p>We built apps to save time or make time fly. Our socially awkward social media savants turned work into our playtime.</p>
+                    <p>We built apps to save time or make time fly. Our socially awkward social media savants turned work into playtime.</p>
                     <p>We concepted, designed, and engineered websites, animations, web apps and mobile apps for ourselves and brand name clients.</p>
                     <p>Our clients ranged from $1 billion companies to professional athletes to new startups.</p>
                     <p><a class="btn btn-primary" href="http://evolyte.com" role="button">Visit Evolyte &raquo;</a></p>
@@ -456,6 +456,7 @@
                 <div id="2007-1" class="panel-collapse collapse">
                   <div class="panel-body">
                     <p>A high-frequency algorithmic trading firm, we raised capital, traded our own internal algorithms, were colocated on the NASDAQ and ran on AWS as one of their first users.</p>
+                    <p>In one of the worst markets since the Great Depression, our return was +43% to the market benchmark.</p>
                     <p><a class="btn btn-primary" href="http://bluestoneinvestment.com/" role="button">Visit BlueStone Investments &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
@@ -476,14 +477,14 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#2005-1">
-                      Became <span class="heavy">Consultant</span> at Towers Watson.
+                      Became a <span class="heavy">Consultant</span> at Towers Watson.
                     </a>
                   </h4>
                 </div>
                 <div id="2005-1" class="panel-collapse collapse">
                   <div class="panel-body">
-                    <p>One of the fastest promoted people in the company's history, I went from Analyst to Consultant in 3 years. As one of 10 people in a 10,000 company, I was given the Chairman's Award for excellence in work quality and client relationships.</p>
-                    <p>As an incentive design consultant I worked for Wal-Mart, RadioShack, The Container Store, AT&T, SBC, Cingular Wireless, and Goldman Sachs to develop reward programs that gamified organizational compensation and performance management systems.
+                    <p>One of the fastest promoted people in the company's history, I went from Analyst to Consultant in 3 years. As one of 10 people in a 10,000-person company, I was given the Chairman's Award for excellence in work quality and client relationships.</p>
+                    <p>As an incentive design consultant I worked for and presented to the Boards of Wal-Mart, RadioShack, The Container Store, AT&T, SBC, Cingular Wireless, National City, Citizens Replublic Bancorp and Goldman Sachs to develop reward programs that gamified organizational compensation and performance management systems.
                     <p><a class="btn btn-primary" href="http://www.towerswatson.com" role="button">Visit Towers Watson &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
@@ -511,7 +512,8 @@
                 <div id="2004-1" class="panel-collapse collapse">
                   <div class="panel-body">
                     <p>After 9/11 destroyed the economy, I was left to fall back on what I knew best:  retail.</p>
-                    <p>Managed P&L for a $5 million, 30-person team, increased fiscal 2004 Revenue (+25%, 9th in the company), and Net Income (+319%) from prior fiscal year, reduced payroll 14% from budget, amplified men’s department total sales to 12th in company from 96th, and nominated as one of 3 out of 350 stores for Store of the Year award.</p>
+                    <p>Managed P&L for a $5 million, 30-person team, increased fiscal 2004 revenue (+25%, 9th in the company), and net income (+319%) from prior fiscal year, reduced payroll 14% from budget, amplified men’s department total sales to 12th in company from 96th.</p>
+                    <p>As a result, we were nominated as one of 3 out of 350 stores for Store of the Year award.</p>
                     <p><a class="btn btn-primary" href="http://www.guess.com" role="button">Shop at Guess &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
@@ -539,7 +541,7 @@
                 <div id="2003-1" class="panel-collapse collapse">
                   <div class="panel-body">
                     <p>Born and raised in Iowa, I transformed the work ethic my parents taught me into academic excellence, studying Mathematics & Actuarial Science at the University of Iowa.</p>
-                    <p>I passed two Actuarial professional examinations and had two internships with PwC during college and was recruited by the biggest names in the Insurance and Pension industries.</p>
+                    <p>I passed two Actuarial professional examinations, had two internships with PwC during college and was recruited by the biggest names in the Insurance and Pension industries.</p>
                     <p><a class="btn btn-primary" href="http://www.math.uiowa.edu/" role="button">Math at Iowa &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
