--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Sean M Everett is a protector fighting for the equality of all living things, building a machine indistinguishable from a human being. More practically, he has founded 4 companies, built 4 iPhone apps, multiple web apps and is a user experienced-obsessed founder and product manager.">
     <meta name="author" content="Sean M Everett">
-    <link rel="shortcut icon" href="ico/favicon.png">
+    <link rel="shortcut icon" href="ico/favicon.ico">
 
     <title>Sean M Everett | Building A Machine Indistinguishable From A Human Being</title>
 
@@ -190,7 +190,7 @@
                     <p>DEFINITION</p>
                     <p>sean-ver-sa-tion | noun</p>
                     <p>a form of interactive, spontaneous communication between two or more people where one is following rules of etiquette and the other throws them out the clown car window</p>
-                    <p><a class="btn btn-primary" href="seanmeverett.com/seanversations.html" role="button">Listen in &raquo;</a></p>
+                    <p><a class="btn btn-primary" href="/seanversations.html" role="button">Listen in &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
               </div>  <!-- panel-default -->
