removing status bar when viewed from phones

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <![endif]-->
   </head>
 
-    <body onload="updateClock(); setInterval('updateClock()', 1000 )">
+    <body onload="updateClock(); setInterval('updateClock()', 10000 )">
     <div class="background">
 
      <!-- STATUS BAR
       ================================================== -->
-      <div class="status-bar">
+      <div class="hidden-xs status-bar">
         <div class="row">
           <div class="col-xs-4 text-left">
             <span class="tiny"><i class="fa fa-circle"></i> <i class="fa fa-circle"></i> <i class="fa fa-circle"></i> <i class="fa fa-circle"></i> <i class="fa fa-circle-o"></i></span> <span class="small">AT&T</span>
