--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#2014-1">
-                      What's <span class="heavy">NeXT</span>.
+                      What's <span class="heavy">Piksel</span>.
                     </a>
                   </h4>
                 </div>
@@ -568,9 +568,10 @@
             <div class="col-xs-4 col-xs-offset-4">
               <div class="pull-right">
                 <ul class="list-inline">
-                <li><a href="http://twitter.com/seanmeverett">Thoughts</a></li>
-                <li><a href="http://seanmeverett.quora.com">Letters</a></li>
-                <li><a href="http://instagram.com/seanmeverett">Photos</a></li>
+                <li><a href="http://twitter.com/seanmeverett">Twitter</a></li>
+                <li><a href="http://seanmeverett.quora.com">Blog</a></li>
+                <li><a href="http://instagram.com/seanmeverett">Instagram</a></li>
+                <li><a href="https://www.linkedin.com/in/seanmeverett">Linkedin</a></li>
               </ul>
               </div>
             </div>  <!-- col -->
@@ -579,11 +580,12 @@
         <div class="visible-xs">
           <div class="row">
             <div class="col-xs-12">
-              <p>© Sean M Everett <a href="/">2014</a>, <a href="/2013">2013-1981</a></p>
+              <p>© Sean M Everett <a href="/">2014-2015</a>, <a href="/2013">2013-1981</a></p>
               <ul class="list-inline">
-                <li><a href="http://twitter.com/seanmeverett">Thoughts</a></li>
-                <li><a href="http://seanmeverett.quora.com">Letters</a></li>
-                <li><a href="http://instagram.com/seanmeverett">Photos</a></li>
+                <li><a href="http://twitter.com/seanmeverett">Twitter</a></li>
+                <li><a href="http://seanmeverett.quora.com">Blog</a></li>
+                <li><a href="http://instagram.com/seanmeverett">Instagram</a></li>
+                <li><a href="https://www.linkedin.com/in/seanmeverett">Linkedin</a></li>
               </ul>
               <p class="small text-muted">Building a machine indistinguishable from a human being.</p>
             </div>  <!-- col -->
