adding piksel data

--- a/index.html
+++ b/index.html
@@ -83,7 +83,20 @@
                 </div>
                 <div id="2014-1" class="panel-collapse collapse">
                   <div class="panel-body">
-                    <p>Stay tuned, the revolution just may be televised.</p>
+                    <p>Managing Piksel's Digital Enterprise Video Platform. Ingest videos or stream live, transcode or encode them on the fly, syndicate to social networks, digital signage, iPhone and Android apps, the web, 24x7 Linear channels, Roku home TVs, and the web. Then measure viewing behavior through multiple analytics integrations and monetize them through VAST-compliant pre-, mid-, post-roll ads or subscriptions. Build on top of our Video Platform with world-class new 5.0 RESTful APIs or if you're a novice, read through our searchable and shiny new online help portal.</p>
+                      <ul>
+                          <li>375 million video views per month</li>
+                          <li>4.25 million live and on demand video minutes served per month</li>
+                          <li>Over 40,000 live events annually</li>
+                          <li>White labelers, resellers, and channel partners</li>
+                          <li>Hundreds of features</li>
+                          <li>Newly implemented "infinite" roll video ad management, google analytics and weekly insight emails
+                          <li>United States Patent Application No. 62/073,785 ("Personalized Channel"), filed October 31, 2014</li>
+                          <li>United States Patent Application No. 62/175,878 ("Media Streaming" for live events from a mobile phone), filed June 15, 2015</li>
+                          <li>Reduced churn by half from FY14 to FY15</li>
+                      </ul>
+                      <p>Also check out our video portal "Hive" product for MCNs (multi-channel networks) launched with Endemol, one of the US's biggest producer of TV shows:  http://www.piksel.com/pressroom/endemol-beyond-usa-and-piksel-launch-new-over-the-top-platform-getbeyond-us/</p>
+                      <p>Or more about me here:  http://www.piksel.com/bio/sean-everett/</p>
                   </div>
                 </div>
               </div>
@@ -562,7 +575,7 @@
         <div class="hidden-xs">
           <div class="row">
             <div class="col-xs-4">
-              <p>© Sean M Everett <a href="/">2014</a>, <a href="/2013">2013-1981</a></p>
+              <p>© Sean M Everett <a href="/">2014-2015</a>, <a href="/2013">2013-1981</a></p>
               <p class="small text-muted">Building a machine indistinguishable from a human being.</p>
             </div>
             <div class="col-xs-4 col-xs-offset-4">
