updating all other previous apps to be Shut Down

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#2014-1">
-                      What's <span class="heavy">Piksel</span>.
+                      Managing the <span class="heavy">Piksel</span> Video Platform and business.
                     </a>
                   </h4>
                 </div>
@@ -97,6 +97,7 @@
                       </ul>
                       <p>Also check out our video portal "Hive" product for MCNs (multi-channel networks) launched with Endemol, one of the US's biggest producer of TV shows:  http://www.piksel.com/pressroom/endemol-beyond-usa-and-piksel-launch-new-over-the-top-platform-getbeyond-us/</p>
                       <p>Or more about me here:  http://www.piksel.com/bio/sean-everett/</p>
+                      <p><a class="btn btn-primary" href="http://www.piksel.com" role="button">Visit Piksel &raquo;</a></p>
                   </div>
                 </div>
               </div>
@@ -124,7 +125,7 @@
                 <div id="2013-1" class="panel-collapse collapse">
                   <div class="panel-body">
                     <p>Based on Gary Vaynerchuck's marketing-in-context philosophy, use the power of Instagram to find customers for your product. Search one of your product's keywords to find potential customers with the same interests and chat them up in the comments.</p>
-                    <p><a class="btn btn-primary" href="http://seanmeverett.com/getROI" role="button">Try getROI &raquo;</a></p>
+                    <p><a class="btn btn-primary" href="#" role="button">Shut Down &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
               </div>  <!-- panel-default -->
@@ -140,7 +141,7 @@
                 <div id="2013-2" class="panel-collapse collapse">
                   <div class="panel-body">
                     <p>StoryApp's robotic wooden friend, Kiiy, records your voice over multiple photos and transforms them into an epic video. Kiiy understands your spoken words and your emotion from your tone of voice, automatically hashtagging your story with each word for it to be discovered by others.</p>
-                    <p><a class="btn btn-primary" href="http://bit.ly/storyapp" role="button">Download StoryApp &raquo;</a></p>
+                    <p><a class="btn btn-primary" href="#" role="button">Shut Down &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
               </div>  <!-- panel-default -->
@@ -156,7 +157,7 @@
                 <div id="2013-3" class="panel-collapse collapse">
                   <div class="panel-body">
                     <p>Act SuperKind and experience hope like it's the first time. A private equity group that scales traditionally unscalable businesses by adding technology, entertainment and marketing partnerships to our portfolio companies.</p>
-                    <p><a class="btn btn-primary" href="http://superkindgroup.com" role="button">Act SuperKind &raquo;</a></p>
+                    <p><a class="btn btn-primary" href="#" role="button">Shut Down &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
               </div>  <!-- panel-default -->
@@ -172,7 +173,7 @@
                 <div id="2013-4" class="panel-collapse collapse">
                   <div class="panel-body">
                     <p>85-page eBook tutorial to build your idea into a product. I show you how to create the exact same thing that you see on the Become A Builder website. If we have the ability to learn, we have a responsibility to teach.</p>
-                    <p><a class="btn btn-primary" href="http://becomeabuilder.com" role="button">Become A Builder &raquo;</a></p>
+                    <p><a class="btn btn-primary" href="#" role="button">Shut Down &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
               </div>  <!-- panel-default -->
@@ -203,7 +204,7 @@
                     <p>DEFINITION</p>
                     <p>sean-ver-sa-tion | noun</p>
                     <p>a form of interactive, spontaneous communication between two or more people where one is following rules of etiquette and the other throws them out the clown car window</p>
-                    <p><a class="btn btn-primary" href="/seanversations.html" role="button">Listen in &raquo;</a></p>
+                    <p><a class="btn btn-primary" href="#" role="button">Shut Down &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
               </div>  <!-- panel-default -->
@@ -237,7 +238,7 @@
                   <div class="panel-body">
                     <p>We built a family, not a company, including an Ice Age Story Artist, Disney Concept Artist, Carnegie Mellon Robotics Engineer, Badgeville Engineer, and a Wal-Mart Actuary. Our goal is to build incredible products for everyday people with a unifying story at its soul.</p>
                     <p>Software + Hardware + Story</p>
-                    <p><a class="btn btn-primary" href="http://adamandluna.com" role="button">Meet Adam & Luna &raquo;</a></p>
+                    <p><a class="btn btn-primary" href="#" role="button">Shut Down &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
               </div>  <!-- panel-default -->
@@ -316,7 +317,7 @@
                   <div class="panel-body">
                     <p>Digital clocks are boring, so get creative. Dock your iPhone with a gorgeous Design O'Clock and spice things up.</p>
                     <p>And if one clock just isn't enough, shop the built-in Clock Shop for custom-designed themes or suggest your own. We just might build it.</p>
-                    <p><a class="btn btn-primary" href="http://designoclockapp.com/" role="button">Get Design O'Clock for Free &raquo;</a></p>
+                    <p><a class="btn btn-primary" href="#" role="button">Shut Down &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
               </div>  <!-- panel-default -->
@@ -333,7 +334,7 @@
                   <div class="panel-body">
                     <p>When we wake up we've got a million messages, need to get ready for work, and grab some breakfast before leaving the house. The last thing we want to do is open yet another app and wait for the weather to load.</p>
                     <p>So, we built Weather Notifier iPhone app to send you push notifications with the day's forecast.</p>
-                    <p><a class="btn btn-primary" href="http://weathernotifierapp.com" role="button">Get Weather Notifications &raquo;</a></p>
+                    <p><a class="btn btn-primary" href="#" role="button">Shut Down &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
               </div>  <!-- panel-default -->
@@ -368,7 +369,7 @@
                     <p>I saw everyday people expressing their joys and pains on Facebook and Twitter, but I felt that there was something much deeper that people wanted to express but couldn't in a public forum.</p>
                     <p>So I built Confide to be an outlet for that. In the first week people posted about rape, sexual molestation, racism, relationship problems, and suicide.</p>
                     <p>I found out two years later that my mom had used this platform to potentially save a life. And that's the moment I realized what my life's work was. To build human things that help people.</p>
-                    <p><a class="btn btn-primary" href="http://confideapp.com" role="button">Confide Anonymously &raquo;</a></p>
+                    <p><a class="btn btn-primary" href="" role="button">Shut Down &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
               </div>  <!-- panel-default -->
@@ -398,6 +399,7 @@
                     <p>We offered 1 deeply discounted Apple product per week and made $30,000 in reserved sales without any money spent on marketing.</p>
                     <p>We were written about in various technology and Apple-related blogs.</p>
                     <p>The store closed down after the holidays.</p>
+                    <p><a class="btn btn-primary" href="#" role="button">Shut Down &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
               </div>  <!-- panel-default -->
@@ -426,7 +428,7 @@
                     <p>We built apps to save time or make time fly. Our socially awkward social media savants turned work into playtime.</p>
                     <p>We concepted, designed, and engineered websites, animations, web apps and mobile apps for ourselves and brand name clients.</p>
                     <p>Our clients ranged from $1 billion companies to professional athletes to new startups.</p>
-                    <p><a class="btn btn-primary" href="http://evolyte.com" role="button">Visit Evolyte &raquo;</a></p>
+                    <p><a class="btn btn-primary" href="#" role="button">Shut Down &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
               </div>  <!-- panel-default -->
@@ -442,7 +444,7 @@
                 <div id="2009-2" class="panel-collapse collapse">
                   <div class="panel-body">
                     <p>The Alpha 2.0 Challenge pitted financial engineering experts against each other to develop the most profitable high-frequency trading algorithms. The winner was able to use our capital and infrastructure to run the algorithms.</p>
-                    <p><a class="btn btn-primary" href="http://bluestoneinvestment.com/" role="button">Visit BlueStone Investments &raquo;</a></p>
+                    <p><a class="btn btn-primary" href="#" role="button">Shut Down &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
               </div>  <!-- panel-default -->
@@ -470,7 +472,7 @@
                   <div class="panel-body">
                     <p>A high-frequency algorithmic trading firm, we raised capital, traded our own internal algorithms, were colocated on the NASDAQ and ran on AWS as one of their first users.</p>
                     <p>In one of the worst markets since the Great Depression, our return was +43% to the market benchmark.</p>
-                    <p><a class="btn btn-primary" href="http://bluestoneinvestment.com/" role="button">Visit BlueStone Investments &raquo;</a></p>
+                    <p><a class="btn btn-primary" href="#" role="button">Shut Down &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
               </div>  <!-- panel-default -->
