adding link to piksel bio

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                           <li>Reduced churn by half from FY14 to FY15</li>
                       </ul>
                       <p>Also check out our video portal "Hive" product for MCNs (multi-channel networks) launched with Endemol, one of the US's biggest producer of TV shows:  http://www.piksel.com/pressroom/endemol-beyond-usa-and-piksel-launch-new-over-the-top-platform-getbeyond-us/</p>
-                      <p>Or more about me here:  http://www.piksel.com/bio/sean-everett/</p>
+                      <p>View my corporate <a href="http://www.piksel.com/bio/sean-everett/">bio</a>.</p>
                       <p><a class="btn btn-primary" href="http://www.piksel.com" role="button">Visit Piksel &raquo;</a></p>
                   </div>
                 </div>
