updating link to new Medium blog

--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
               <div class="pull-right">
                 <ul class="list-inline">
                 <li><a href="http://twitter.com/seanmeverett">Twitter</a></li>
-                <li><a href="http://seanmeverett.quora.com">Blog</a></li>
+                <li><a href="https://medium.com/humanizing-technology">Blog</a></li>
                 <li><a href="http://instagram.com/seanmeverett">Instagram</a></li>
                 <li><a href="https://www.linkedin.com/in/seanmeverett">Linkedin</a></li>
               </ul>
@@ -598,7 +598,7 @@
               <p>© Sean M Everett <a href="/">2014-2015</a>, <a href="/2013">2013-1981</a></p>
               <ul class="list-inline">
                 <li><a href="http://twitter.com/seanmeverett">Twitter</a></li>
-                <li><a href="http://seanmeverett.quora.com">Blog</a></li>
+                <li><a href="https://medium.com/humanizing-technology">Blog</a></li>
                 <li><a href="http://instagram.com/seanmeverett">Instagram</a></li>
                 <li><a href="https://www.linkedin.com/in/seanmeverett">Linkedin</a></li>
               </ul>
